<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/about_software"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/boundary" />
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="270dp"
        android:layout_height="210dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/introduce"/>
    <TextView
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/contact"/>
</LinearLayout>