<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_foler"
        android:textSize="18sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/folder_name"
        android:background="@drawable/bg_create_forlder"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp" />
    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/boundary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="0.01"
            android:layout_height="match_parent"
            android:background="@color/boundary"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>